# smart

./: .gitignore  CMakeLists.txt  LICENSE  README.md  alloc_hugepage.sh  build.sh  deps.sh  killall.sh  run.sh
ae/: README.md
ae/collect/: common.sh  fig10-dtx-scale-up.sh  fig11-dtx-scale-latency.sh  fig12abc-btree-scale-up.sh  fig12def-btree-scale-out.sh  fig13-thread-count-batch-size.sh  fig14-hashtable-conflict-bc.sh  fig14-hashtable-conflict.sh  fig3-scalability.sh  fig4-owr.sh  fig4b-owr-pcie-perf.sh  fig5-hashtable-motivation.sh  fig7-hashtable-scale-out.sh  fig8-hashtable-breakdown.sh  fig9-hashtable-latency.sh  killall.sh  runall.sh  table1.sh
ae/plot/: README.md  common.py  fig10.py  fig11.py  fig12.py  fig13.py  fig14.py  fig3.py  fig4.py  fig5.py  fig7.py  fig8.py  fig9.py  runall.sh
ae/raw-reference/: fig10-smallbank.csv  fig10-tatp.csv  fig11-smallbank.csv  fig11-tatp.csv  (+25 more)
btree/: CMakeLists.txt  backend.cpp  bench.cpp  btree.cpp  btree.h
config/: backend.json  backend.pmem.json  datastructure.json  smart_config.json  test_rdma.json  transaction.json
dtx/: CMakeLists.txt  addr_cache.h  common.h  dtx.cpp  dtx.h  manager.h  memstore.h
dtx/smallbank/: CMakeLists.txt  backend.cpp  bench.cpp  smallbank.h
dtx/tatp/: CMakeLists.txt  backend.cpp  bench.cpp  tatp.h
hashtable/: CMakeLists.txt  backend.cpp  bench.cpp  hashtable.cpp  hashtable.h
patch/: guide.md
smart/: CMakeLists.txt  initiator.cpp  resource_manager.cpp  target.cpp  task.cpp  thread.cpp
test/: CMakeLists.txt  test_rdma.cpp  test_rdma_dyn.cpp
util/: CMakeLists.txt  ycsb_gen.cpp
(+74 files in other folders)
